# R-2FA

./: .env.example  Cargo.toml  README.md
totp/: .gitignore  README.md  index.html  package.json  rsbuild.config.ts  tsconfig.json
totp/db/: Cargo.toml
totp/db/migrations/2024-06-19-090243_tokens/: up.sql
totp/db/migrations/2024-06-19-093126_tokens/: down.sql  up.sql
totp/db/src/: lib.rs  models.rs  schema.rs
totp/src/: App.svelte  index.ts  main.ts  tailwind.css
totp/src-tauri/: Cargo.toml  tauri.conf.json
totp/src-tauri/src/: lib.rs  main.rs  token.rs
totp/src/lib/: AddToken.svelte  DisplayTokens.svelte  Footer.svelte  Greet.svelte  HandleTokens.svelte  Intro.svelte  RemoveToken.svelte  TokenForm.svelte  Tokens.svelte  links.ts  option.ts  service_token.ts  token.ts  types.ts
