[package]
name = "totp"
version = "0.0.0"
description = "Open Source 2FA TOTP Authenticator"
authors = ["RedIsGaming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
tauri-plugin-positioner = "1.0.4"
totp-rs = "5.5.1"
base32 = "0.5.0"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
