[package]
name = "totp"
version = "0.0.0"
description = "R-2FA - TOTP Authenticator"
authors = ["RedIsGaming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tauri-plugin-positioner = "1.0.4"
totp-rs = { version = "5.5.1", features = ["otpauth"] }
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
